 syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fudan.ast.grpc.lib";
option java_outer_classname = "AuthProto";

enum Roles {
  ROLE_USER = 0;
  ROLE_ADMIN = 1;
}

message JwtRequest {
  string email = 1;
  string password = 2;
}

message JwtToken {
  string jwtToken = 1;
}

message JwtTokenResponse {
  string jwtToken = 1;
  bool valid = 2;
}

message ValidateResponse {
  bool valid = 1;
  Roles role = 2;
}

service AuthService {
  rpc generateJwtToken(JwtRequest) returns(JwtTokenResponse) {};
  rpc validate(JwtToken) returns(ValidateResponse) {};
}

// Request message for registerUser
message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string affiliation = 4;
  string location = 5;
}

// Response message for registerUser
message RegisterUserResponse {
  int32 id = 1;
  bool state = 2;
  string message = 3;
}

// Request message for validateUserName
message ValidateEmailRequest {
  string email = 1;
}

message ValidateEmailResponse {
  bool valid = 1;
}

service RegisterService {
  rpc registerUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc validateEmail(ValidateEmailRequest) returns (ValidateEmailResponse);
}
